# sqlx-shenanigans

./: Cargo.toml  sqlx-data.json
migrations/: 20230616111239_initial.up.sql
src/: main.rs
